fix text-align for figure

--- a/fa.babaei.net/static/css/custom-rtl.css
+++ b/fa.babaei.net/static/css/custom-rtl.css
@@ -150,6 +150,10 @@ code, kbd, pre, samp {
     direction: initial;
 }
 
+.box figure {
+    text-align: center;
+}
+
 .blogarchive-heading {
     direction: rtl;
 }
